2004-04-22  David Reveman  <c99drn@cs.umu.se>

	* src/cairoint.h:
	* src/cairo_surface.c (_cairo_surface_create_pattern):
	* src/cairo_pattern.c (_cairo_pattern_set_source_offset)
	(_cairo_pattern_get_image):
	* src/cairo_gstate.c (_cairo_gstate_create_pattern):
	* src/cairo_gl_surface.c (_cairo_gl_surface_create_pattern): Fixed
	pattern source offset.

2004-04-20  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_pattern.c (_cairo_image_data_set_linear): Use
	CAIRO_MAXSHORT instead of INT_MAX.

	* src/cairo_traps.c (_cairo_traps_extents): Use CAIRO_MAXSHORT and
	CAIRO_MINSHORT instead of SHRT_MAX and SHRT_MIN.

	* src/cairoint.h: including limits.h and defining CAIRO_MAXSHORT and
	CAIRO_MINSHORT.

2004-04-16  Carl Worth  <cworth@isi.edu>

	* NEWS: Added notes for snapshot 0.1.22.

	* configure.in: Now depends on libpixman 0.1.1.
	Bump version to 0.1.22.

	* src/cairo_image_surface.c (_create_pixman_format): Track pixman
	fixes to PIXMAN_FORMAT_NAME_*.

	* src/cairo_png_surface.c (cairo_png_surface_create): Explicitly
	add cases for all enum values to eliminate compiler warnings.

	* src/cairo.h: Remove proposal for surface_clip interface as
	cairo_clip should be able to cover this case now.

	* BUGS: Added bug concerning negative ref_counts.

2004-04-09  David Reveman  <c99drn@cs.umu.se>

	* NEWS: Added notes for snapshot 0.1.21.

	* configure.in: Bump version to 0.1.21.

	* src/cairo_surface.c (_cairo_surface_create_pattern):
	* src/cairo_pattern.c (_cairo_pattern_get_image): Fixed
	incorrect rounding of pattern image size.

	* AUTHORS: Added myself to the AUTHORS file.

	* cairo.pc.in:
	* src/Makefile.am:
	* src/cairo-features.h.in:
	* src/cairo.h:
	* src/cairo_gl_surface.c (added): Added OpenGL surface backend.

	* configure.in: Automatically detect available backends.

2004-04-06  Carl Worth  <cworth@isi.edu>

	* NEWS: Added notes for snapshot 0.1.20.

	* RELEASING: Added new RELEASING file.

2004-04-04  David Reveman  <c99drn@cs.umu.se>
